[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/fnt/KenVector Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/img/shield_gold.png" type="Texture" id=3]
[ext_resource path="res://assets/img/glassPanel_200.png" type="Texture" id=4]
[ext_resource path="res://assets/img/barHorizontal_green_mid 200.png" type="Texture" id=5]
[ext_resource path="res://assets/img/bgspeedship_small.png" type="Texture" id=6]
[ext_resource path="res://assets/img/play_button.png" type="Texture" id=7]
[ext_resource path="res://assets/img/play_button_h.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 92.0
size_flags_horizontal = 3
alignment = 1

[node name="score_label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 393.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 397.0
margin_right = 427.0
margin_bottom = 72.0
texture = ExtResource( 3 )

[node name="shield_bar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 824.0
margin_bottom = 72.0
rect_clip_content = true
size_flags_horizontal = 11
value = 25.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="lives_counter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 828.0
margin_right = 983.0
margin_bottom = 72.0

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/lives_counter"]
margin_right = 49.0
margin_bottom = 72.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 3

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/lives_counter"]
margin_left = 53.0
margin_right = 102.0
margin_bottom = 72.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 3

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/lives_counter"]
margin_left = 106.0
margin_right = 155.0
margin_bottom = 72.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 3

[node name="start_button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -32.5
margin_right = 124.5
margin_bottom = 32.5
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="message_label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="message_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
